--- a/sdk/dotnet/test/Datasync.Webservice/Datasync.Webservice.csproj
+++ b/sdk/dotnet/test/Datasync.Webservice/Datasync.Webservice.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.0" />
