More fixes for the publish steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -116,29 +116,18 @@ stages:
 
           - pwsh: |
               New-Item -Path '$(Build.ArtifactStagingDirectory)/nuget' -ItemType Directory -Force
-              Get-ChildItem -Path '$(netSdkPath)/src' -Directory -Recurse | Where-Object { $_.FullName -match "\\bin\\Release$" } | Foreach-Object {
+              Get-ChildItem -Path '$(netSdkPath)\src' -Directory -Recurse | Where-Object { $_.FullName -match "\\bin\\$(buildConfiguration)$" } | Foreach-Object {
                 $directory = $_.FullName
                 Get-ChildItem -Path $directory -Include @( "*.nupkg", "*.nuspec" ) -File -Recurse | %{
                   Write-Host "Copy-Item -Path $_ -Destination $(Build.ArtifactStagingDirectory)\nuget"
                   Copy-Item -Verbose -Path $_ -Destination '$(Build.ArtifactStagingDirectory)\nuget'
                 }
               }
-              Copy-Item -Path '$(netSdkPath)/SignList.xml' -Destination '$(Build.ArtifactStagingDirectory)/nuget'
+              Copy-Item -Path '$(netSdkPath)\SignList.xml' -Destination '$(Build.ArtifactStagingDirectory)\nuget'
             displayName: Create NuGet Package Artifacts
 
           - publish: '$(Build.ArtifactStagingDirectory)/nuget'
             artifact: nuget
-          - pwsh: |
-              Get-ChildItem -Path $(Build.ArtifactStagingDirectory) -Recurse
-            displayName: Show Artifact Staging Area
-
-          - publish: '$(Build.ArtifactStagingDirectory)/build'
-            artifact: 'build'
-            displayName: Upload build Artifacts
-
-          - publish: '$(Build.ArtifactStagingDirectory)/nuget'
-            artifact: 'nuget'
-            displayName: Upload NuGet artifacts
 
   - stage: postbuild
     displayName: Postbuild Checks
