Remove comment - I think it might be interfering

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -180,10 +180,9 @@ stages:
 
   - stage: sign
     displayName: Sign SDK
-    dependsOn: [ 'build' ]
+    dependsOn: [ 'postbuild' ]
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     jobs:
-      # .NET SDK Signing
       - template: sign-artifacts/jobs/v2.yml@internal-templates
 
   - stage: release
