Revert the pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,12 +16,6 @@ variables:
   PREVIEW_LABEL: 'preview'
   BUILD_NUMBER: $[counter(format('{0}_{1}_{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['Build.SourceBranch']), 1)]
   NUGET_VERSION: $[format('{0}-{1}.{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['BUILD_NUMBER'])]
-  netSdkSolution: '$(netSdkPath)/Datasync.Framework.sln'
-  netTemplateDirectory: '$(netSdkPath)/templates'
-  msBuildArguments: '/nologo /bl /clp:DisableConsoleColor;Verbosity:normal;PerformanceSummary /fl'
-  msBuildVersionArgs: '/p:PackageVersion=$(NUGET_VERSION) /p:Version=$(BASE_VERSION)'
-  netSdkArtifact: 'build-netsdk'
-  nugetArtifact: 'nuget'
 
 resources:
   repositories:
@@ -32,60 +26,22 @@ resources:
 
 stages:
   - stage: build
-    displayName: Build SDK Artifacts
+    displayName: Build SDK
     jobs:
-      - job: build_dotnet
-        displayName: Build .NET SDK Artifacts
+      - job: buildnetsdk
+        displayName: Build .NET SDK
         steps:
-          - task: UseDotNet@2
-            inputs:
-              version: '5.0.x'
-              performMultiLevelLookup: true
-
-          - task: NuGetToolInstaller@1
-            inputs:
-              checkLatest: true
-
-          - pwsh: |
-              $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
-              $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
-              Write-Host "Preview label: $pr"
-              Write-Host "NuGet version: $nuget"
-              Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
-            displayName: Override version for PRs
-            condition: eq(variables['Build.Reason'], 'PullRequest')
-
-          - pwsh: |
-              $tagVersion = $env:BUILD_SOURCEBRANCHNAME
-              Write-Host "Tag version: $tagVersion"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
-            displayName: Override version for releases
-            condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
-
-          - pwsh: |
-              Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
-            displayName: Update the build number to match version
+          - template: .ci/prebuild.yml
 
           - task: MSBuild@1
+            displayName: 'Build SDK'
             inputs:
               configuration: $(buildConfiguration)
-              solution: $(netSdkSolution)
-              msBuildArguments: '/t:Restore $(msBuildArguments)'
-            displayName: Restore NuGet Packages
-
-          - task: MSBuild@1
-            inputs:
-              configuration: $(buildConfiguration)
-              solution: $(netSdkSolution)
-              msBuildArguments: '/t:Build;Pack $(msBuildVersionArgs) $(msBuildArguments)'
-            displayName: Build .NET SDK
-
-          - publish: $(netSdkPath)
-            artifact: $(netSdkArtifact)
-            displayName: Upload build artifacts
+              solution: '$(netSdkPath)/Datasync.Framework.sln'
+              msBuildArguments: '/nologo /t:Restore;Build;Pack /p:PackageVersion=$(NUGET_VERSION) /p:Version=$(BASE_VERSION) /bl /clp:DisableConsoleColor;Verbosity:normal;PerformanceSummary /fl'
 
           - task: VSTest@2
+            displayName: 'Run Unit Tests'
             inputs:
               testAssemblyVer2: |
                 **\Microsoft.*.Test.dll
@@ -94,45 +50,47 @@ stages:
               searchFolder: $(netSdkPath)
               codeCoverageEnabled: true
               configuration: $(buildConfiguration)
-            displayName: 'Run Unit Tests'
 
           - task: PublishTestResults@2
+            displayName: 'Publish Test Results'
             inputs:
               testResultsFormat: xUnit
               testResultsFiles: 'TestResults\**'
               searchFolder: $(netSdkPath)
               configuration: $(buildConfiguration)
-            displayName: 'Publish Test Results'
+
+          - template: .ci/postbuild.yml
+            parameters:
+              sourceDirectory: '$(netSdkPath)/src'
+              buildConfiguration: '$(buildConfiguration)'
+
+      - job: buildnettemplate
+        displayName: Build .NET Core Template
+        steps:
+          - template: .ci/prebuild.yml
 
           - pwsh: |
               dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
-            workingDirectory: $(netTemplateDirectory)
-            displayName: Pack .NET Template Project
+            displayName: Build Template
+            workingDirectory: '$(netSdkPath)/templates'
 
-          - pwsh: |
-              New-Item -Path '$(Build.ArtifactStagingDirectory)/nuget' -ItemType Directory -Force
-              Get-ChildItem -Path '$(netSdkPath)\src' -Directory -Recurse | Where-Object { $_.FullName -match "\\(bin|obj)\\$(buildConfiguration)$" } | Foreach-Object {
-                $directory = $_.FullName
-                Get-ChildItem -Path $directory -Include @( "*.nupkg", "*.nuspec" ) -File -Recurse | %{
-                  Write-Host "Copy-Item -Path $_ -Destination $(Build.ArtifactStagingDirectory)\nuget"
-                  Copy-Item -Verbose -Path $_ -Destination '$(Build.ArtifactStagingDirectory)\nuget'
-                }
-              }
-              Get-ChildItem -Path '$(netTemplateDirectory)' -Directory -Recurse | Where-Object { $_.FullName -match "\\(bin|obj)\\$(buildConfiguration)$" } | Foreach-Object {
-                $directory = $_.FullName
-                Get-ChildItem -Path $directory -Include @( "*.nupkg", "*.nuspec" ) -File -Recurse | %{
-                  Write-Host "Copy-Item -Path $_ -Destination $(Build.ArtifactStagingDirectory)\nuget"
-                  Copy-Item -Verbose -Path $_ -Destination '$(Build.ArtifactStagingDirectory)\nuget'
-                }
-              }
-              Copy-Item -Path '$(netSdkPath)\SignList.xml' -Destination '$(Build.ArtifactStagingDirectory)\nuget'
-            displayName: Create NuGet Package Artifacts
+          - template: .ci/postbuild.yml
+            parameters:
+              sourceDirectory: '$(netSdkPath)/templates'
+              buildConfiguration: '$(buildConfiguration)'
 
-          - publish: '$(Build.ArtifactStagingDirectory)/nuget'
-            artifact: $(nugetArtifact)
+      - job: presign
+        displayName: Pre-signing Tasks
+        steps: 
+          - task: PublishBuildArtifacts@1
+            displayName: Publish SignList.xml
+            inputs:
+              pathtoPublish: '$(netSdkPath)/SignList.xml'
+              artifactName: nuget
 
   - stage: postbuild
     displayName: Postbuild Checks
+    condition: eq('refs/heads/main', variables['Build.SourceBranch'])
     dependsOn: [ 'build' ]
     jobs:
       - job: postbuild_checks
@@ -145,7 +103,6 @@ stages:
               $CODEBASE_NAME = $repo + "_" + $branch
               echo "Using codebase: $CODEBASE_NAME"
               Write-Host "##vso[task.setvariable variable=CODEBASE_NAME]$CODEBASENAME"
-            displayName: Set Codebase Name
 
           - task: CredScan@2
             inputs:
@@ -176,29 +133,14 @@ stages:
               ToolLogsNotFoundAction: 'Standard'
 
           - task: PublishSecurityAnalysisLogs@3
-            displayName: Publish security analysis logs
+            displayName: 'Publish security analysis logs'
 
   - stage: sign
     displayName: Sign SDK
-    dependsOn: [ 'postbuild' ]
+    dependsOn: [ 'build' ]
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     jobs:
       - template: sign-artifacts/jobs/v2.yml@internal-templates
 
-  - stage: release
-    displayName: Release
-    dependsOn: [ 'sign' ]
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
-    jobs:
-      - job: release_nuget
-        displayName: Release NuGet Packages
-        steps:
-          - task: DownloadPipelineArtifact@2
-            inputs:
-              path: $(Pipeline.Workspace)
-              artifactName: 'nuget-signed'
-            displayName: Download Signed NuGet Packages
 
-          - pwsh: |
-              Get-ChildItem -Path $(Pipeline.Workspace) -Recurse
-            displayName: Show Signed NuGet Packages
+ 
