Run signing if not a pull request.
Signing is required to publish to the internal feed, so only skip signing if it's a PR.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,7 +138,7 @@ stages:
   - stage: sign
     displayName: Sign SDK
     dependsOn: [ 'build' ]
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
     jobs:
       - template: sign-artifacts/jobs/v2.yml@internal-templates
 
