Fixed the image registration

--- a/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
+++ b/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
@@ -17,10 +17,10 @@
 
   <ItemGroup>
     <Resource Include="Images\additem.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\refresh.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
