--- a/sdk/dotnet/templates/Template.DatasyncServer/Template.DatasyncServer.csproj.template
+++ b/sdk/dotnet/templates/Template.DatasyncServer/Template.DatasyncServer.csproj.template
@@ -6,16 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.*">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="5.0.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="5.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="{NUGET_VERSION}" />
+    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="{NUGET_VERSION}" />
   </ItemGroup>
 </Project>
