--- a/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
+++ b/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Datasync.Client" Version="5.0.0-preview.110" />
+    <PackageReference Include="Microsoft.Datasync.Client" Version="5.0.0-beta.2" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
