--- a/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
+++ b/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Datasync.Client" Version="5.0.0-beta.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Include="App.xaml" />
   </ItemGroup>
 
