First version of the NET6 service

--- a/samples/TodoApp/TodoApp.Data/Constants.cs.example
+++ b/samples/TodoApp/TodoApp.Data/Constants.cs.example
@@ -8,6 +8,6 @@ namespace TodoApp.Data
         /// <summary>
         /// The base URI for the Datasync service.
         /// </summary>
-        internal static string ServiceUri = "https://todoservice-2021-11-01.azurewebsites.net";
+        internal static string ServiceUri = "https://APPSERVICENAME.azurewebsites.net";
     }
 }
