Updated csproj files

--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Authors>Microsoft Corporation</Authors>
-    <Company>Microsoft Corporation</Company>
-    <Copyright>Copyright (c) 2021 Microsoft Corporation.</Copyright>
+    <AssemblyName>Microsoft.AspNetCore.Datasync</AssemblyName>
+    <Authors>Microsoft</Authors>
+    <Company>Microsoft</Company>
+    <Copyright>&#169; Microsoft Corporation. All rights reserved.</Copyright>
     <Description>An ASP.NET Core based framework for synchronizing structured data between a database and a client application.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</IconUrl>
     <LangVersion>9.0</LangVersion>
+    <LicenseUrl>https://github.com/Azure/azure-mobile-apps/blob/main/LICENSE.txt</LicenseUrl>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageId>Microsoft.AspNetCore.Datasync</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -15,6 +17,7 @@
     <ProductName>Microsoft.AspNetCore.Datasync</ProductName>
     <ProjectUrl>https://github.com/Azure/azure-mobile-apps</ProjectUrl>
     <RepositoryUrl>https://github.com/Azure/azure-mobile-apps</RepositoryUrl>
+    <RootNamespace>Microsoft.AspNetCore.Datasync</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
