--- a/sdk/dotnet/templates/DatasyncTemplates.csproj
+++ b/sdk/dotnet/templates/DatasyncTemplates.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <PackageType>Template</PackageType>
         <PackageId>Microsoft.AspNetCore.Datasync.Template.CSharp</PackageId>
+        <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
         <Authors>Microsoft</Authors>
         <Company>Microsoft</Company>
         <LicenseUrl>https://github.com/Azure/azure-mobile-apps/blob/main/LICENSE.txt</LicenseUrl>
